k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: market-entropy
  labels:
    name: market-entropy
